<resources>
    <string name="app_name">proxy</string>
    <string name="string_register">注册</string>
    <string name="string_login">登录</string>
    <string name="string_forget_password">忘记密码</string>
    <string name="string_reset_password">重置密码</string>
    <string name="string_modify_password">修改密码</string>
    <string name="string_modify_save">保存修改</string>
    <string name="string_back">返回</string>
    <string name="string_my_agent">我的代理</string>
    <string name="string_access_code_trade">授权转让</string>
    <string name="string_exit">退出</string>
    <string name="string_search">搜索</string>
    <string name="string_access">授权</string>
    <string name="string_input_cellphone">请输入手机号码</string>
    <string name="string_input_cellphone_code">请输入手机验证码</string>
    <string name="string_input_password">请输入6~12位密码</string>
    <string name="string_input_account_password">请输入账户密码</string>
    <string name="string_input_new_password">请输入新密码</string>
    <string name="string_input_new_password_confirm">请确认新密码</string>
    <string name="string_input_password_confirm">请确认密码</string>
    <string name="string_get_cellphone_code">点击获取验证码</string>
    <string name="string_get_cellphone_code_delay">s后重新获取</string>
    <string name="string_get_password_back">忘记密码？立即找回</string>
    <string name="string_toast_cellphone">请输入有效的手机号码</string>
    <string name="string_toast_cellphone_code">请输入手机验证码</string>
    <string name="string_toast_password">请输入6~12位密码</string>
    <string name="string_toast_password_confirm">请确认密码</string>
    <string name="string_toast_password_different">密码不一致</string>
    <string name="string_toast_cellphone_different">手机号码发生改变</string>
    <string name="string_toast_network_error">网络错误</string>


</resources>
