<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_act_login_nav"
        style="@style/nav_header_of_act">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/string_forget_password"
            android:textSize="24dp" />

        <Button
            android:id="@+id/bt_act_to_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:text="@string/string_register" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_act_login_nav"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/et_act_login_cellphone"
            style="@style/editor"
            android:hint="@string/string_input_cellphone"
            android:inputType="phone"
            android:maxLength="11" />

        <EditText
            android:id="@+id/et_act_login_password"
            style="@style/editor"
            android:layout_below="@+id/et_act_login_cellphone"
            android:hint="@string/string_input_account_password"
            android:inputType="textPassword"
            android:maxLength="12" />

        <Button
            android:id="@+id/bt_act_login_lost_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:layout_below="@+id/et_act_login_password"
            android:text="@string/string_get_password_back"/>

        <Button
            android:id="@+id/bt_act_login_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_act_login_lost_password"
            android:layout_marginTop="20dp"
            android:text="@string/string_login" />

    </RelativeLayout>

</RelativeLayout>